# ifeval

./: .gitignore  DEVELOPERS.md  README.md  pyproject.toml  setup.py
examples/: example_en_responses.jsonl  example_ru_responses.jsonl  pass_at_k_example.py  simple_evaluation.py
ifeval/: __init__.py  cli.py
ifeval/core/: __init__.py  evaluation.py  instructions.py  registry.py
ifeval/examples/: simple_evaluation.py
ifeval/languages/: __init__.py  generic.py  language_processor.py  language_registry.py
ifeval/languages/en/: __init__.py  constants.py  instructions.py  processor.py
ifeval/languages/ru/: __init__.py  constants.py  instructions.py  processor.py
ifeval/utils/: __init__.py  config.py  huggingface.py  io.py  text_processing.py
