[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifeval"
version = "1.1.0"
description = "Instruction Following Evaluation Framework"
authors = [
    {name = "Kolibrify Team", email = "example@example.com"},
]
requires-python = ">=3.11"
dependencies = [
    "langdetect==1.0.9",
    "nltk==3.8.1",
    "immutabledict==4.1.0",
    "absl-py==2.1.0",
    "datasets>=3.1.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
